# embedded-trainings

./: .gitignore  INSTALL.md  README.md  VERIFY.md
.github/workflows/: ci.yml
advanced/: README.md
advanced/docs/: segment-1.md  segment-2.md  segment-3.md  segment-4.md
advanced/protocol/src/: lib.rs
advanced/templates/: Cargo.toml
advanced/templates/segment-1/: Cargo.toml
advanced/templates/segment-2/: Cargo.toml
advanced/templates/segment-2/src/: main.rs  uarte.rs
advanced/templates/segment-3/src/: main.rs  uarte.rs
advanced/templates/segment-4/: Cargo.toml
advanced/templates/segment-4/src/: main.rs  uarte.rs
beginner/: README.md
beginner-lite/: Abstract.md
beginner-lite/docs/: instructor-guide.md  segment-1.md  segment-2.md
beginner-lite/examples/template-1/: example-1-blinker.rs  example-2-ray.rs  example-3-KIT.rs
beginner-lite/hints/: hint-1-KIT.rs  hint-2-KIT.rs
beginner-lite/protocol/: Cargo.toml
beginner-lite/protocol/src/: lib.rs
beginner-lite/templates/: Cargo.toml
beginner-lite/templates/segment-1/: Cargo.toml
beginner-lite/templates/segment-1/src/: main.rs
beginner-lite/templates/segment-2/: Cargo.toml
beginner-lite/templates/segment-2/src/: main.rs  main2.rs
beginner/docs/: INSTALL.md  instructor-guide.md  segment-1.md  segment-2.md  segment-3.md  segment-4.md
beginner/draw-client-tester/: Cargo.toml
beginner/draw-client-tester/.cargo/: config
beginner/draw-modem/: Cargo.toml  debug.gdb
beginner/draw-modem/src/: main.rs
beginner/draw-server/: Cargo.toml  draw.ron
beginner/draw-server/src/: board_mgr.rs  main.rs  modem_comms.rs
beginner/hints/: hint-3-KIT.rs
beginner/protocol/src/: lib.rs
beginner/templates/: Cargo.toml
beginner/templates/segment-1/: Cargo.toml
beginner/templates/segment-1/src/: main.rs
beginner/templates/segment-3/: Cargo.toml
beginner/templates/segment-3/src/: main.rs
beginner/templates/segment-4/: Cargo.toml
beginner/templates/segment-4/src/: main.rs
beginner/utilities/draw-client-tester/: Cargo.toml  debug.gdb
beginner/utilities/draw-client-tester/src/: main.rs
beginner/utilities/draw-modem/: Cargo.toml  debug.gdb
beginner/utilities/draw-modem-new/src/: main.rs
beginner/utilities/draw-modem/src/: main.rs
beginner/utilities/draw-server/: Cargo.toml  draw-freedraw.ron  draw-partitioned.ron  draw-roundrobin.ron  draw.ron
beginner/utilities/draw-server-new/: Cargo.toml  draw-freedraw.ron
beginner/utilities/draw-server-new/.cargo/: config
beginner/utilities/draw-server-new/src/: board_mgr.rs  main.rs  modem_comms.rs
beginner/utilities/draw-server/src/: board_mgr.rs  main.rs  modem_comms.rs
beginner/utilities/loopback-server/: draw.ron
beginner/utilities/loopback-server/src/: main.rs  modem_comms.rs
beginner/utilities/loopback-test/: Cargo.toml
beginner/utilities/loopback-test/src/: main.rs
ci/: netlify.sh  run.sh
