[package]
name = "segment-3"
version = "0.1.0"
authors = ["Ferrous Systems <contact@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt  = "0.2"
cortex-m-rt = "0.6.10"
cortex-m    = "0.6.1"
heapless    = "0.5.1"
nb          = "0.1.2"
postcard    = "0.4.2"


[dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[dependencies.protocol]
path = "../../protocol"

[dependencies.serde]
version = "1.0"
default-features = false
