[package]
name = "draw-client-tester"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt   = "0.2"
cortex-m-rt  = "0.6.10"
heapless     = "0.4.0"
nb           = "*"
postcard     = "0.3.2"
embedded-hal = "0.2.2"

[dependencies.dwm1001]
version = "0.1.1"
features = ["dev", "rt"]

[dependencies.protocol]
path = "../../protocol"

[dependencies.serde]
version = "1.0"
default-features = false

[patch.crates-io.dw1000]
git = "https://github.com/braun-robotics/rust-dw1000"
rev = "036dc67b3147417c49318b840f4d769f8045967e"
