[package]
name = "draw-client-tester"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-halt   = "0.2"
cortex-m-rt  = "0.6.10"
heapless     = "0.5.1"
nb           = "0.1.2"
postcard     = "0.4.2"
embedded-hal = "0.2.3"
embedded-timeout-macros = "0.2.0"

[dependencies.dwm1001]
version = "0.3.0"
features = ["dev", "rt"]

[dependencies.protocol]
path = "../../protocol"

[dependencies.serde]
version = "1.0"
default-features = false
