[package]
name = "draw-modem"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
panic-ramdump = "0.1.1"
nb            = "0.1.2"
cortex-m-rtfm = "0.4.3"
nrf52832-pac  = "0.8.0"
dw1000        = "0.3.0"
embedded-hal  = "0.2.3"
heapless      = "0.5.1"
postcard      = "0.4.2"
cortex-m-rt   = "0.6.10"
embedded-timeout-macros = "0.2.0"

[dependencies.nrf52-bin-logger]
version = "0.4.0"
features = ["unstable", "xxAA"]

[dependencies.ssmarshal]
version       = "1.0.0"
default-features = false

[dependencies.dwm1001]
version = "0.3.0"
features = [ "dev", "rt" ]

# Local workspace deps

[dependencies.protocol]
path = "../../protocol"
